# iot-monorepo

./: .gitignore  README.md  TODO.md
projects/iot-be/: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
projects/iot-be/infra/: gunicorn-conf.py  gunicorn-start.sh  gunicorn-stop.sh  iot-be.monit
projects/iot-be/iot_be/: main.py
projects/iot-be/iot_be/conf/: settings_module.py
projects/iot-be/iot_be/remote_log/: remote_log_domain.py  remote_log_models.py  remote_log_router.py
projects/iot-be/iot_be/temp/: temp_domain.py  temp_models.py  temp_router.py
projects/smart-ac/: TODO.md  platformio.ini
projects/smart-ac/src/: main.cpp
projects/smart-thermostat/: README.md  platformio.ini  pre-processor-overrides.h
projects/smart-thermostat/docs/: Opentherm Association.webloc  TODO.md  events.drawio  ihormelnyk:opentherm_library- Arduino:ESP8266:ESP32 OpenTherm Library for HVAC system control communication.webloc
projects/smart-thermostat/docs/PROJECT SPECS/: _Chronothermostat project specs.md
projects/smart-thermostat/include/: errors.h  settings.h
projects/smart-thermostat/include/devices/: display-device.h  led-device.h  relay-device.h  rotary-encoder-device.h
projects/smart-thermostat/include/domain/: heating-domain.h  scheduler-domain.h
projects/smart-thermostat/include/sensors/: ds18b20-sensor.h  sht85-sensor.h
projects/smart-thermostat/include/utils/: list-utils.h  time-utils.h  (+2 more)
projects/smart-thermostat/src/: errors.cpp  main.cpp
projects/tempeh-incubator/: platformio.ini
projects/tempeh-incubator/include/: errors.h  settings.h
projects/tempeh-incubator/src/: errors.cpp  main.cpp
(+34 files in other folders)
